[package]
name = "transaction-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rust_decimal = "1.25"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rust_decimal_macros = "1.25"
